objects/TV_Sales__c.object
<CustomObject>
    <fields>
        <fullName>LCD_Warranty_Number__c</fullName>
        <label>LCD Warranty Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LED_Service_Vendor_Phone__c</fullName>
        <label>LED Service Vendor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>MRP__c</fullName>
        <description>Price of the product</description>
        <label>MRP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plasma_Panel_code__c</fullName>
        <label>Plasma Panel code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LCD</fullName>
                </value>
                <value>
                    <fullName>LED</fullName>
                </value>
                <value>
                    <fullName>Plasma</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TV Sale</label>
    <nameField>
        <label>TV Sales Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TV Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>LCD_RT</fullName>
        <active>true</active>
        <description>Record type for LCD Product type</description>
        <label>LCD RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>LED_RT</fullName>
        <active>true</active>
        <description>Record type for LED Product type</description>
        <label>LED RT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Plasma_RT</fullName>
        <active>true</active>
        <description>Record type for Plasma Product type</description>
        <label>Plasma RT</label>
    </recordTypes>
</CustomObject>